--- a/kursachback/templates/account/tours/main.html
+++ b/kursachback/templates/account/tours/main.html
@@ -1,92 +1,112 @@
-
 {% extends "base.html" %}
 {% load poll_extras %}
 {% block title %}Главная страница турфирмы{% endblock %}
 {% block content %}
     <p style="text-align: center; font-size: 24px; font-weight: bold">Куда бы съездить?</p>
     <div class="vertical_search">
-    <form ng-controller="AppCtrl as ctrl" ng-app="MyApp"  class="search"  action="." method="get">
-       <input type="search" placeholder="Страна" name="country">
-        <input type="search" placeholder="Сезон" name="season">
-        <md-datepicker  ng-click="ctrl.myDate" md-hide-icons="triangle" md-placeholder="Enter date"></md-datepicker>
-        <input type="search" placeholder="Дата отправления" ng-model="this.ctrl.myDate|date:'yyyy-MM-dd'" name="date">
-       <input type="submit"  value="Поиск" class='submit_tur'>
-    </form>
+        <form ng-controller="AppCtrl" ng-app="MyApp" class="search" action="." method="get">
+            <input type="search" placeholder="Страна" name="country">
+            <input type="search" placeholder="Сезон" name="season">
+            <md-datepicker ng-model="myDate" ng-click="eventClass()" md-hide-icons="triangle"
+                           md-placeholder="Enter date"></md-datepicker>
+            <input type="search" placeholder="Дата отправления" ng-model="myDate|date:'yyyy-MM-dd'"  name="date">
+            <input type="submit" value="Поиск" class='submit_tur'>
+        </form>
     </div>
-    <div class="hotel">
-        {% for n in count_hotel %}
-            <div style="float: left;">
-                <img style="width: 300px; height: 200px;margin-left: 10px; border-radius: 10px;"
-                     src="{{ img_hotel|dict_value_or_null:n }}">
-                <p style="text-align: center"><a href=" {{ idhotel|get_url:n }}"> {{ idhotel|get_name_hotel:n }}</a></p>
-                <div class="star_hotel">
-                    {% for star in fiew_star %}
-                        <h>*</h>
 
-                    {% endfor %}
+    <div class="slider" style="margin: 37px 63px;" data-slick='{"slidesToShow": 3, "slidesToScroll": 3}'>
+        {% for n in count_hotel %}
+            <div style="">
+                <div class="container_hotel">
+                    <img class="img_hotel"
+                         src="{{ img_hotel|dict_value_or_null:n }}">
+                    <p style="text-align: center"><a href=" {{ idhotel|get_url:n }}"> {{ idhotel|get_name_hotel:n }}</a>
+                    </p>
+                    <div class="star_hotel">
+                        {% for star in star_hotel_main|number_hotel:n %}
+                            <img style="width: 23px; height: 23px;" src="/static/toursimage/image_hotel/star_hotel.png">
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         {% endfor %}
     </div>
+    <div class="slider" data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'>
+
+    </div>
+
     <div>
-     {% if tours_country_search %}
-         {% for n in count %}
-            <div class="catalog">
-                <div style="">
-                    <img style="border-radius: 10px;" class="tour" src="{{ img_tour|dict_value_or_null:n }}"/>
-                </div>
-                <div style="margin-left: 20px">
-                    <p>
-                        <a href="{{ tours_country_search|get_url:n }}">{{ tours_country_search|get_name_tour:n }}</a>
-                    </p>
-                    <p>{{ coast_tours| dict_value_or_null:n }}₽</p>
-                </div>
-            </div>
-            </div>
-        {% endfor %}
-     {% elif count %}
-        <h1>Список открытых туров</h1>
-        <div>
-        {% for n in count %}
-            <div class="catalog">
-                <div class="block_tour">
+        {% if tours_country_search %}
+            {% for n in count %}
+                <div class="catalog">
                     <div style="">
                         <img style="border-radius: 10px;" class="tour" src="{{ img_tour|dict_value_or_null:n }}"/>
                     </div>
                     <div style="margin-left: 20px">
-                        <p><a href="{{ tours|get_url:n }}">{{ tours|get_name_tour:n }}</a></p>
+                        <p>
+                            <a href="{{ tours_country_search|get_url:n }}">{{ tours_country_search|get_name_tour:n }}</a>
+                        </p>
                         <p>{{ coast_tours| dict_value_or_null:n }}₽</p>
                     </div>
                 </div>
+            {% endfor %}
+        {% elif count %}
+            <h1>Список открытых туров</h1>
+            <div>
+                {% for n in count %}
+                    <div class="catalog">
+                        <div class="block_tour">
+                            <div>
+                                <img style="border-radius: 10px;" class="tour"
+                                     src="{{ img_tour|dict_value_or_null:n }}"/>
+                            </div>
+                            <div style="margin-left: 20px;">
+                                <p><a style="font-size: 19px;"
+                                      href="{{ tours|get_url:n }}">{{ tours|get_name_tour:n }}</a></p>
+                                <p>Дата отправления: {{ group|departure_group:n|date:"d-m-Y" }}</p>
+                                <p>{{ coast_tours| dict_value_or_null:n }}₽</p>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                {% else %}
+                <h>{{ empty }}</h>
             </div>
-        {% endfor %}
-        {% else %}
-            <h>{{ empty }}</h>
-         </div>
-    {% endif %}
+        {% endif %}
     </div>
     <script>
-    (function () {
-  'use strict';
+        /*This part of code is used to create a slick carousel of items*/
+        $(".slider").slick({
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 2000,
+            dots: true,
+        });
 
-  angular.module('MyApp', ['ngMaterial', 'ngMessages']).config(function($mdDateLocaleProvider) {
-    $mdDateLocaleProvider.formatDate = function(date) {
-      return date ? moment(date).format('YYYY-MM-DD') : '';
-    };
+        /*Used to work with datepicker. When click on the
+        item datapicker called event handler eventClass()*/
+        angular.module('MyApp', ['ngMaterial', 'ngMessages']).controller('AppCtrl', function ($scope) {
+            $scope.eventClass = function(){
+                $scope.myDate = new Date();
 
-    $mdDateLocaleProvider.parseDate = function(dateString) {
-      var m = moment(dateString, 'YYYY-MM-DD', true);
-      return m.isValid() ? m.toDate() : new Date(NaN);
-    };
-  })
-  .controller("AppCtrl", function($log) {
-    this.myDate = new Date();
+                $scope.minDate = new Date(
+                    $scope.myDate.getFullYear(),
+                    $scope.myDate.getMonth() - 2,
+                    $scope.myDate.getDate());
 
-    this.onDateChanged = function() {
-      $log.log('Updated Date: ', this.myDate);
-    };
-  });
-})();
+                $scope.maxDate = new Date(
+                    $scope.myDate.getFullYear(),
+                    $scope.myDate.getMonth() + 2,
+                    $scope.myDate.getDate());
+
+                $scope.onlyWeekendsPredicate = function (date) {
+                    var day = date.getDay();
+                    return day === 0 || day === 6;
+                }
+            };
+
+        });
 
     </script>
 {% endblock %}
