--- a/kursachback/templates/orders/order/created.html
+++ b/kursachback/templates/orders/order/created.html
@@ -4,6 +4,5 @@
 
 {% block content %}
     <h1>Спасибо вам </h1>
-    <p>Бронирование тура успешно пройдено. Ваш номер брони
-        <strong>{{ order.id }}</strong>.</p>
+    <p>Бронирование тура успешно пройдено.</p>
 {% endblock %}
