--- a/kursachback/templates/account/tours/main.html
+++ b/kursachback/templates/account/tours/main.html
@@ -2,7 +2,12 @@
 {% load poll_extras %}
 {% block title %}Главная страница турфирмы{% endblock %}
 {% block content %}
-    <p style="text-align: center; font-size: 24px; font-weight: bold">Куда бы съездить?</p>
+<div class = 'background_for_search'>
+  <div class = 'container_for_header_search'>
+    <div>
+        <p class = 'text_header_search'> Куда бы съездить? </p>
+    </div>
+  </div>
     <div class="vertical_search">
         <form ng-controller="AppCtrl" ng-app="MyApp" class="search" action="." method="get">
             <input type="search" placeholder="Страна" name="country">
@@ -13,7 +18,8 @@
             <input type="submit" value="Поиск" class='submit_tur'>
         </form>
     </div>
-
+</div>
+<div class = "slider_block">
     <div class="slider" style="margin: 37px 63px;" data-slick='{"slidesToShow": 3, "slidesToScroll": 3}'>
         {% for n in count_hotel %}
             <div style="">
@@ -31,10 +37,9 @@
             </div>
         {% endfor %}
     </div>
-    <div class="slider" data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'>
-
-    </div>
-
+         <div class="slider" data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'>
+         </div>
+</div>
     <div>
         {% if tours_country_search %}
             {% for n in count %}
