--- a/kursachback/templates/cart/detail.html
+++ b/kursachback/templates/cart/detail.html
@@ -5,6 +5,7 @@
     Ваша корзина для покупок
 {% endblock %}
 {% block content %}
+    <div class="left_margin_content">
     <h1>Ваша корзина для покупок</h1>
     <table class="table_cart">
         <thead>
@@ -47,4 +48,5 @@
           Забронировать
         </a>
     </p>
+    </div>>
 {% endblock %}
