--- a/kursachback/templates/account/register_done.html
+++ b/kursachback/templates/account/register_done.html
@@ -3,6 +3,8 @@
 {% block title %}Welcome{% endblock %}
 
 {% block content %}
+    <div class="left_margin_content">
     <h1>Welcome {{ new_user.first_name }}!</h1>
     <p>Your account has been successfully created. Now you can <a href="{% url "login" %}">log in</a>.</p>
+    </div>>
 {% endblock %}
