--- a/kursachback/templates/account/tours/detail.html
+++ b/kursachback/templates/account/tours/detail.html
@@ -5,6 +5,7 @@
     {{ tours_detail.name_tour }}
 {% endblock %}
 {% block content %}
+    <div class="left_margin_content">
     <div style="display: flex;">
         <div>
             <img style="width: 470px; height: 310px;"
@@ -38,4 +39,5 @@
             </div>
         {% endfor %}
     </div>
+    </div>>
 {% endblock %}
