--- a/kursachback/templates/account/tours/main.html
+++ b/kursachback/templates/account/tours/main.html
@@ -40,7 +40,7 @@
          <div class="slider" data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'>
          </div>
 </div>
-    <div>
+    <div class="left_margin_content">
         {% if tours_country_search %}
             {% for n in count %}
                 <div class="catalog">
