--- a/kursachback/templates/account/tours/detail_hotel.html
+++ b/kursachback/templates/account/tours/detail_hotel.html
@@ -5,6 +5,7 @@
    {{ hotel_detail.nametype }}
 {% endblock %}
 {% block content %}
+    <div class="left_margin_content">
     <div style="display: flex;">
     <div >
         <img style="width: 470px; height: 310px;" src="/static/toursimage/image_hotel/{{hotel_detail.image_hotel }}">
@@ -17,4 +18,5 @@
         {{ file_content|linebreaks }}
     </div>
     </div>
+    </div>>
 {% endblock %}
