--- a/kursachback/templates/account/registration/login.html
+++ b/kursachback/templates/account/registration/login.html
@@ -2,6 +2,7 @@
 {% extends "base.html" %}
 {% block title %}Log-in{% endblock %}
 {% block content %}
+    <div class="left_margin_content">
     <h1>Log-in</h1>
     {% if form.errors %}
         <p>
@@ -19,4 +20,5 @@
             <p><input type="submit" value="Вход"></p>
         </form>
     </div>
+    </div>>
 {% endblock %}
